SubBt/force-app/main/default/objects/Selection__c/Selection__c.object-meta.xml
<CustomObject>
    <label>Selection Sheet</label>
    <nameField>
        <label>Selection Sheet</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Selection Sheets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>