SubBt/force-app/main/default/objects/Selection__c/fields/Community__c.field-meta.xml
<CustomField>
    <fullName>Community__c</fullName>
    <label>Community</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FoxTrail</fullName>
            </value>
            <value>
                <fullName>Woodbend</fullName>
            </value>
            <value>
                <fullName>Arbor Woods</fullName>
            </value>
            <value>
                <fullName>Lake Village</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>