SubBt/force-app/main/default/objects/Selection__c/fields/Hide_Images__c.field-meta.xml
<CustomField>
    <fullName>Hide_Images__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Images</label>
    <type>Checkbox</type>
</CustomField>