SubBt/force-app/main/default/objects/Selection__c/fields/Repository_Area__c.field-meta.xml
<CustomField>
    <fullName>Repository_Area__c</fullName>
    <label>Repository Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Organization</fullName>
            </value>
            <value>
                <fullName>Deployed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>