SubBt/force-app/main/default/objects/Selection__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Selections</fullName>
                <default>true</default>
                <label>Pending Selections</label>
            </value>
            <value>
                <fullName>Selections In Progress</fullName>
            </value>
            <value>
                <fullName>Selections Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>