SubBt/force-app/main/default/objects/Selection__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Project__c</columns>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Type__c</columns>
    <columns>Visible_to_Customer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>